--- a/app/views/about/index.html.erb
+++ b/app/views/about/index.html.erb
@@ -14,7 +14,7 @@
     <div class="column-full">
        <div class="column">
             <h2>Overview</h2>
-            <p>Prepared.ly is a simple way for you stay informed and proactive about the ongoing threat of wildfires.</p>
+            <p>Prepared.ly is a simple way for you to stay informed and proactive about the ongoing threat of wildfires.</p>
             <h2>Notifications</h2>
             <p>Receive timely reminders from Austin Fire Department experts when there is a particular risk in your area, suggestions to remain proactive and National Weather Service “Red Flag” and “High Risk” warnings.</p>
         </div>
