remove old registration_items partial from about layout, update content of about items

--- a/app/views/about/index.html.erb
+++ b/app/views/about/index.html.erb
@@ -14,9 +14,9 @@
     <div class="column-full">
        <div class="column">
             <h2>Overview</h2>
-            <p>Prepared.ly is a simple way for you stay informed and proactive about the ongoing threat of wildfires.</p>
+            <p>Prepared.ly is a simple way for you to stay informed and proactive about the ongoing threat of wildfires.</p>
             <h2>Notifications</h2>
-            <p>Receive timely reminders from Austin Fire Department experts when there is a particular risk in your area, suggestions to remain proactive and National Weather Service “Red Flag” and “High Risk” warnings.</p>
+            <p>Receive non-emergency expert suggestions, National Weather Service fire weather forecasts and alerts, and more.</p>
         </div>
      
         <div class="column">
@@ -24,7 +24,7 @@
             <p>Visualize your home’s proximity to the Wildland Urban Interface (WUI), understand local conditions and view your estimated realtime risk.
 </p>
             <h2>Customized Advice</h2>
-            <p>Submit questions and receive answers unique to your property or situation.</p>
+            <p>Schedule email and SMS reminders to complete wildfire preparedness tasks, track your progress, submit questions to wildfire experts.</p>
         </div>
     </div><!--end column-full-->    
     <div class="column-full">
@@ -33,32 +33,24 @@
     <div class="column-full">
         <div class="column">
             <h2>Local Conditions</h2>
-            <p>Review realtime conditions and understand how they relate to your area’s wildfire risk.
-                </p>
-            <h2>Goodwill</h2>
-            <p>Submit questions to the fire department about your home or property.
-                </p>    
-            <h2>Q &amp; A</h2>
-            <p>Use Prepared.ly to help less tech savvy neighbors with prevention efforts.
-                </p>
+            <p>Review realtime conditions and understand how they relate to your area’s wildfire risk.</p>
+            <h2>Sharing</h2>
+            <p>Organize your neighbors to participate in community clean-up days, share your progress on social media and invite your friends to Prepared.ly.</p>    
+            <h2>Community</h2>
+            <p>Add comments about prevention tasks, submit questions to the Fire Department and help less tech-savvy neighbors with prevention efforts.</p>
             <h2>Get started!</h2>
-                <p>Prepare your home and property with simple tasks suggested by wildfire prevention experts.
-                </p> 
-                <p>Review our terms of use <a href="../terms">here</a></p>    
+            <p>Prepare your home and property with tasks suggested by wildfire prevention experts and suggest new activities.
+            </p> 
+            <p>Review our terms of use <a href="../terms">here</a></p>    
         </div>
         <div class="column">
             <h2>Sharing</h2>
-                <p>Invite your neighbors and friends to participate in prevention efforts and community cleanup days.
-                </p>
+            <p>Invite your neighbors and friends to participate in prevention efforts and community cleanup days.</p>
             <h2>On-Site Education</h2>
-                <p>Schedule on-site consultations for your home and neighborhood with wildfire prevention experts.
-                </p>
-            <h2>Guidance</h2>
-                <p>Review nationally accepted safety standards before making home and property improvements.
-                </p>     
-            <p>
-            <a href="../map"><button class="btn btn-success btn-large"><i class="icon-map-marker icon-white"></i> Check it out!</button></a>
-            </p>           
+            <p>Schedule on-site consultations for your home and neighborhood with wildfire prevention experts.</p>
+            <h2>Resources</h2>
+            <p>Review nationally accepted safety standards including best practices for home &amp; property improvements and becoming a Firewise community.</p>     
+            <p><a href="../map"><button class="btn btn-success btn-large"><i class="icon-map-marker icon-white"></i> Check it out!</button></a></p>           
         </div>  
      </div> <!--end column-full-->    
 </div> <!--end column wrapper-->
