use rails helper instead of html to include carto and wax js on map/post since files weren't being found

--- a/app/views/map/post.html.erb
+++ b/app/views/map/post.html.erb
@@ -41,8 +41,8 @@
   <!-- scripts -->
   <script src="http://code.leafletjs.com/leaflet-0.3.1/leaflet.js"></script>
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-  <script type="text/javascript" src="app/assets/javascripts/wax.leaflet.min.js"></script>
-  <script type="text/javascript" src="app/assets/javascripts/cartodb-leaflet.js"></script>
+  <%= javascript_include_tag "wax.leaflet.min.js" %>
+  <%= javascript_include_tag "cartodb-leaflet.js" %>
 
 
  <script type="text/javascript">
