--- a/app/views/layouts/_dashboard.html.erb
+++ b/app/views/layouts/_dashboard.html.erb
@@ -66,6 +66,10 @@
                                 <%= render "tasks/tasks" %>
                                 <%= render "tasks/taskbuttons" %>
                             </div>
+                            <!-- render form to add new comment; existing comments in tasks/tasks partial -->
+                            <div id="comments">
+                            <%= render "tasks/comments" %>
+                            </div>
                         </section> 
 <!-- //////////////////// notifications/account stuff ///////////////////////// -->        
                         <section id="notify-section" class="tab-pane"> 
