--- a/app/views/layouts/_dashboard.html.erb
+++ b/app/views/layouts/_dashboard.html.erb
@@ -90,8 +90,18 @@
                                     </div>
                                 </div>  
                             <%= render "devise/registrations/edit" %>
-
-           
+                            </section> 
+<!-- //////////////////// contact AFD ///////////////////////// -->        
+                            <section id="contact-section" class="tab-pane">
+                            <ul id="myTab" class="nav nav-tabs dash-tabs">
+                                <li class="active note">
+                                    <a href="#home" data-toggle="tab">
+                                    CONTACT AN EXPERT:</a>
+                                </li>
+                            </ul>
+                            
+                                <%= render "contacts/form" %>
+                            
                             </section> 
                     </div>  
                 </div>           
