--- a/app/views/layouts/_usernavigation-side.html.erb
+++ b/app/views/layouts/_usernavigation-side.html.erb
@@ -9,10 +9,9 @@
 
           <ul class="nav nav-tabs sidetabs">
                 <li><a href="#map-section" data-toggle="tab">location and current conditions</a></li>
-
                 <li><a href="#task-section" data-toggle="tab">your preparedness</a></li>
                 <li><a href="#notify-section" data-toggle="tab">your account</a></li>
-                <li><a href="#task-section" data-toggle="tab">contact AFD</a></li>
+                <li><a href="#contact-section" data-toggle="tab">contact an expert</a></li>
 
           </ul>
     </div> 
