--- a/app/views/layouts/_dashboard.html.erb
+++ b/app/views/layouts/_dashboard.html.erb
@@ -7,104 +7,98 @@
                     <%= notice %>
    
 <!-- //////////////////// Map ///////////////////////// -->        
-                        <section id="map-section" class="tab-pane"> 
-                                <ul id="myTab" class="nav nav-tabs dash-tabs">
-                                    <li class="active note">
-                                        <a href="#home" data-toggle="tab">
-                                        LOCATION AND CURRENT CONDITIONS</a>
-                                    </li>
-                                </ul>
-
-                                <div class="taskbox lightblue">  
-                                    <div class="contentbox">    
-                                        <%= form_tag("/map", :method=> "mappartial") do %>
-                                        <div id="map-small">
+                    <section id="map-section" class="tab-pane"> 
+                        <ul id="myTab" class="nav nav-tabs dash-tabs">
+                            <li class="active note">
+                                <a href="#home" data-toggle="tab">
+                                LOCATION AND CURRENT CONDITIONS</a>
+                            </li>
+                        </ul>
+                        <div class="taskbox lightblue">  
+                            <div class="contentbox"> 
+                                <div id="map">
+                                </div>
+                                <%= form_tag("/map", :remote=> true) do %>
+                                    <div class="controls">
+                                        <div class="input-append map-butt">
+                                        <%= text_field_tag(:q, nil,  :value => @user.address, :class => 'address form-inline input-xx-large') %><%= submit_tag("Load my map", :class => 'btn-large btn-success btn') %>
                                         </div>
-                                        <h1><%= @user.address %></h1>
-                                        <p></p>
-                                         <h2>Search another address</h2>
-                                            <div class="controls">
-                                                <div class="input-append map-butt">
-                                                <%= text_field_tag(:q, nil,  :value => '123 Main St. Austin, TX', :class => 'address form-inline input-xx-large') %><%= submit_tag("Load my map", :class => 'btn-large btn-success btn') %>
-                                                    <% end %>
-                                                </div>
-                                            </div>    
-                                        <!--<img src="assets/map.jpg" width="400px" height="220px">-->
-                                    </div>    
-                                    <div class="container-fluid">
-                                        <div class="span6">
-                                            <div class="triangle-top">
-                                            </div>            
-                                            <div class="triangle-top-box"> 
-                                            </div>
-                                            <div class="triangle-top">
-                                            </div>            
-                                            <div class="triangle-top-box"> 
-                                            </div>
-                                        </div>
-                                        <div class="span6">
-                                            <div class="triangle-top">
-                                            </div>            
-                                            <div class="triangle-top-box"> 
-                                            </div>
-                                            <div class="triangle-top">
-                                            </div>            
-                                            <div class="triangle-top-box"> 
-                                            </div>
-                                        </div>
+                                    </div>   
+                                <% end %> 
+                            </div>    
+                            <div class="container-fluid">
+                                <div class="span6">
+                                    <div class="triangle-top">
+                                    </div>            
+                                    <div class="triangle-top-box"> 
                                     </div>
-                        </section> 
+                                    <div class="triangle-top">
+                                    </div>            
+                                    <div class="triangle-top-box"> 
+                                    </div>
+                                </div>
+                                <div class="span6">
+                                    <div class="triangle-top">
+                                    </div>            
+                                    <div class="triangle-top-box"> 
+                                    </div>
+                                    <div class="triangle-top">
+                                    </div>            
+                                    <div class="triangle-top-box"> 
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </section> 
 <!-- //////////////////// tasks ///////////////////////// -->        
-                        <section id ="task-section" class="tab-pane">
-                            <ul id="myTab" class="nav nav-tabs dash-tabs">
-                                <li class="active note">
-                                    <a href="#home" data-toggle="tab">
-                                    YOUR PREPARED.LY TASKS:</a>
-                                </li>
-                            </ul>
-                            <div class="taskbox lightblue">
-                                <%= render "tasks/tasks" %>
-                                <%= render "tasks/taskbuttons" %>
-                            </div>
-                            <!-- render form to add new comment; existing comments in tasks/tasks partial -->
-                            <div id="comments">
-                            <%= render "tasks/comments" %>
-                            </div>
-                        </section> 
+                    <section id ="task-section" class="tab-pane">
+                        <ul id="myTab" class="nav nav-tabs dash-tabs">
+                            <li class="active note">
+                                <a href="#home" data-toggle="tab">
+                                YOUR PREPARED.LY TASKS:</a>
+                            </li>
+                        </ul>
+                        <div class="taskbox lightblue">
+                            <%= render "tasks/tasks" %>
+                            <%= render "tasks/taskbuttons" %>
+                        </div>
+                        <!-- renders form to add new comment; existing comments come from tasks/tasks partial -->
+                        <div id="comments">
+                        <%= render "tasks/comments" %>
+                        </div>
+                    </section> 
 <!-- //////////////////// notifications/account stuff ///////////////////////// -->        
-                        <section id="notify-section" class="tab-pane"> 
-                                <h2>Your account.</h2>
-                                <p>Current settings:</p>
-                                <ul>
-                                    <li>name: <%= @user.first_name %> <%= @user.last_name %></li>
-                                    <li>email: <%= @user.email %></li>
-                                    <li>phone: <%= @user.phone %></li>
-                                    <li>saved address: <%= @user.address %></li>
-                                    <li>date account created: <%= @user.created_at %></li>
-                                </ul>
-                                <p>Also, feel free to leave us comments and questions with the "feedback" tab on the left side of the page, or send us an email at <a href="mailto:austin@codeforamerica.org">austin@codeforamerica.org</a> at any time.</p>
-                               <div class="sub-section">
-                                    <div class="task-butt"> 
-                                        <!--<a href="../users/sign_up" class="btn btn-large btn-success"> Create an account </a>-->
-                                        <hr></hr>
-                                    </div>
-                                </div>  
-                            <%= render "devise/registrations/edit" %>
-                            </section> 
-<!-- //////////////////// contact AFD ///////////////////////// -->        
-                            <section id="contact-section" class="tab-pane">
-                            <ul id="myTab" class="nav nav-tabs dash-tabs">
-                                <li class="active note">
-                                    <a href="#home" data-toggle="tab">
-                                    CONTACT AN EXPERT:</a>
-                                </li>
+                    <section id="notify-section" class="tab-pane"> 
+                            <h2>Your account.</h2>
+                            <p>Current settings:</p>
+                            <ul>
+                                <li>name: <%= @user.first_name %> <%= @user.last_name %></li>
+                                <li>email: <%= @user.email %></li>
+                                <li>phone: <%= @user.phone %></li>
+                                <li>saved address: <%= @user.address %></li>
+                                <li>date account created: <%= @user.created_at %></li>
                             </ul>
-                            
-                                <%= render "contacts/form" %>
-                            
-                            </section> 
-                    </div>  
-                </div>           
-            </div>
+                            <p>Also, feel free to leave us comments and questions with the "feedback" tab on the left side of the page, or send us an email at <a href="mailto:austin@codeforamerica.org">austin@codeforamerica.org</a> at any time.</p>
+                           <div class="sub-section">
+                                <div class="task-butt"> 
+                                    <!--<a href="../users/sign_up" class="btn btn-large btn-success"> Create an account </a>-->
+                                    <hr></hr>
+                                </div>
+                            </div>  
+                        <%= render "devise/registrations/edit" %>
+                        </section> 
+<!-- //////////////////// contact AFD ///////////////////////// -->        
+                        <section id="contact-section" class="tab-pane">
+                        <ul id="myTab" class="nav nav-tabs dash-tabs">
+                            <li class="active note">
+                                <a href="#home" data-toggle="tab">
+                                CONTACT AN EXPERT:</a>
+                            </li>
+                        </ul>
+                        <%= render "contacts/form" %>    
+                    </section> 
+                </div>  
+            </div>           
+        </div>
     </div>
-</div>    
+</div>
