--- a/app/views/layouts/_usernavigation-side.html.erb
+++ b/app/views/layouts/_usernavigation-side.html.erb
@@ -2,16 +2,14 @@
     <div class="span3 sidebar">
         <img src="assets/userphoto-default.png">
         <div id="usercontainer">
-            <h2>Hi, <%= @user.first_name %>.</h2>
+            <h2>Hi, <%= @user.first_name %></h2>
             <p><%= @user.address %></p>
-        </div>
-<% end %>        
-
-          <ul class="nav nav-tabs sidetabs">
-                <li><a href="#map-section" data-toggle="tab">location and current conditions</a></li>
-                <li><a href="#task-section" data-toggle="tab">your preparedness</a></li>
-                <li><a href="#notify-section" data-toggle="tab">your account</a></li>
-                <li><a href="#contact-section" data-toggle="tab">contact an expert</a></li>
-
-          </ul>
+        </div>        
+      <ul class="nav nav-tabs sidetabs" id="joe" >
+            <li><a href="#map-section" data-toggle="tab">location and current conditions</a></li>
+            <li><a href="#task-section" data-toggle="tab">your preparedness</a></li>
+            <li><a href="#notify-section" data-toggle="tab">your account</a></li>
+            <li><a href="#contact-section" data-toggle="tab">contact an expert</a></li>
+      </ul>
     </div> 
+<% end %>
