--- a/app/views/map/get.html.erb
+++ b/app/views/map/get.html.erb
@@ -21,7 +21,7 @@
           </header>
 <div class="container-fluid">  
     <section id="map-section">       
-        <%= form_tag("/map", :method=> "mappartial") do %>
+        <%= form_tag("/map") do %>
             <h2>1. Enter your address, and see your house on the map.</h2> 
             <p>You'll also see an assessment of your risk level, current weather conditions, and burn ban information.
             </p>
