--- a/app/views/layouts/_usernavigation-side.html.erb
+++ b/app/views/layouts/_usernavigation-side.html.erb
@@ -5,7 +5,7 @@
             <h2>Hi, <%= @user.first_name %></h2>
             <p><%= @user.address %></p>
         </div>        
-      <ul class="nav nav-tabs sidetabs" id="joe" >
+      <ul class="nav nav-tabs sidetabs" id="sidenav" >
             <li><a href="#map-section" data-toggle="tab">location and current conditions</a></li>
             <li><a href="#task-section" data-toggle="tab">your preparedness</a></li>
             <li><a href="#notify-section" data-toggle="tab">your account</a></li>
