--- a/app/views/map/post.js.erb
+++ b/app/views/map/post.js.erb
@@ -1,4 +1,4 @@
-$("#placeholder").html("<%= escape_javascript(render(:partial => 'map/mapinfo')) %>");
+$("#mapinfo").html("<%= escape_javascript(render(:partial => 'map/mapinfo')) %>");
 
 
    // when these are in post.html.erb, they are ignored if rendering the action via js
