change order of css files to load in correct orders, added comments to avoid wonkiness in the future

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,11 +5,14 @@
   <meta name="viewport" content="width=device-width,initial-scale =1, user-scalable = no" />
   <%= yield :stylesheet_yield %>
   <%= yield :fb_og_tags %>
-  <%= stylesheet_link_tag "application", :media => "all" %>
-  <%= stylesheet_link_tag "bootstrap", :media => "all" %>
-  <%= stylesheet_link_tag "mobile", :media => "all and (max-width: 600px)" %>
-  <%= stylesheet_link_tag "bootstrap-responsive", :media => "all" %>
   <%= stylesheet_link_tag "jquery-ui" %>
+  <%= stylesheet_link_tag "bootstrap", :media => "all" %>
+  <!--this must be third to last, add all others above this -->
+  <%= stylesheet_link_tag "application", :media => "all" %>
+  <!--this must be second to last -->
+  <%= stylesheet_link_tag "mobile", :media => "all and (max-width: 600px)" %>
+  <!--this must be the last -->
+  <%= stylesheet_link_tag "bootstrap-responsive", :media => "all" %>
 </head>
 <body data-offset="50" data-target=".subnav" data-spy="scroll" data-twttr-rendered="true">
 <!-- navbar content -->
