--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -5,7 +5,7 @@
         <ul id="myTab" class="nav nav-tabs">
             <li class="active note">
                 <a href="#home" data-toggle="tab">
-                YOUR PREPARED.LY TASKS:</a>
+                YOUR TASK SHOULD YOU CHOOSE TO ACCEPT:</a>
             </li>
         </ul>
         <div class="taskbox lightblue">
