Update comments to load on same page via ajax; need to add form validation to prevent spam/overcommenting/etc; need some css love too

--- a/app/views/layouts/_dashboard.html.erb
+++ b/app/views/layouts/_dashboard.html.erb
@@ -75,12 +75,9 @@
                         </ul>
                         <div class="taskbox lightblue">
                             <%= render "tasks/tasks" %>
-                            <%= render "tasks/taskbuttons" %>
+                            
                         </div>
-                        <!-- renders form to add new comment; existing comments come from tasks/tasks partial -->
-                        <div id="comments">
-                        <%= render "tasks/comments" %>
-                        </div>
+                        <!-- comments included here from tasks partial -->
                     </section> 
 <!-- //////////////////// notifications/account stuff ///////////////////////// -->        
                     <section id="notify-section" class="tab-pane"> 
